# AlianceTrade-updates-and-arch

./: .gitignore  README.md  conf.ini  instcfg.ini  pyproject.toml
Updates/: conf.py  instcfg.ini  main.py  orientl.py  support.py  ved_info.py
old_programms/: AlianceRarE.py  updates.py
